k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-webapp
  template:
    metadata:
      labels:
        app: fastapi-webapp
    spec:
      containers:
      - name: fastapi-webapp
        image: ghcr.io/dhmhtrhsgkantiafikas/fastapi-webapp:1.3
        ports:
        - containerPort: 5000
