k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-webapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP       #internal comms to fastapi
