k8s/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller   
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fastapi-gateway
  namespace: default
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fastapi-route
  namespace: default
spec:
  parentRefs:
    - name: fastapi-gateway
  rules:
    # 1ο Route: Μόνο το αρχικό URL (η HTML σελίδα)
    - matches:
        - path:
            type: Exact
            value: /
      backendRefs:
        - name: fastapi-service
          port: 5000
    # 2ο Route: Ό,τι ξεκινάει από /api (το JSON API)
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: fastapi-service
          port: 5000
